--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
 
+  sqflite: any
+  path_provider: ^0.4.1
   rxdart: ^0.20.0
 
 dev_dependencies:
